Fix window height and gaps width

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     /* Common rows (buttons) height */
-    --height: 15.1vh;
+    --gapWidth: 2px;
+    --height: calc((100vh - var(--gapWidth) * 5) / 6.5);
 }
 html {
     font-size: calc(var(--height) / 2);
@@ -18,7 +20,7 @@ main {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: calc(1.5 * var(--height)) repeat(5, var(--height));
-    gap: 2px;
+    gap: var(--gapWidth);
     border-radius: 2vmin;
     overflow: hidden;
 }
